--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ python-dateutil==2.8.2
 rfc3986==1.5.0
 rsserpent==0.1.4
 rsserpent-plugin-bilibili @ git+https://github.com/RSSerpent/rsserpent-plugin-bilibili.git@2494bbb7eb7e55a9f758adaa8e807f0171705076
+rsserpent-plugin-caa @ git+https://github.com/wuzhongyi1105/rsserpent-plugin-caa.git@1c6c0de6f0a79b7cfebafe0b39a3e1ceaee370db
+beautifulsoup4
 six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
