--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ rsserpent==0.1.4
 rsserpent-plugin-bilibili @ git+https://github.com/RSSerpent/rsserpent-plugin-bilibili.git@9634371aa2f38b5eddc30f526a55c749bf53a165
 rsserpent-plugin-caa @ git+https://github.com/wuzhongyi1105/rsserpent-plugin-caa.git@1669f7becd0008476f5dd63ea62a1b55a0bc48e3
 rsserpent-plugin-jam @ git+https://github.com/wuzhongyi1105/rsserpent-plugin-jam.git@5e1e9301caf641d09c2f0e8cbc1a4b3d63a686cb
+requests
+BeautifulSoup4
 six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
